--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,4 @@ jobs:
           
       - name: Trigger next step
         run: |
-          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GCR_TOKEN}}" https://api.github.com/repos/chocrates-test-org/t3-actions-chocrates-anussa/actions/workflows/35073593/dispatches -d '{"ref": "main", "inputs": { "branch": "newbranch", "app_list": "apps!"} }
+          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GCR_TOKEN}}" https://api.github.com/repos/chocrates-test-org/t3-actions-chocrates-anussa/actions/workflows/35073593/dispatches -d '{"ref": "main", "inputs": { "branch": "newbranch", "app_list": "apps!"} }'
